    user presses Enter.  Part of bug #46600

  [ Evan Dandrea ]
  * Suppress Pango warning about not being able to open /root/.pangorc.
  * Use the page name instead of the new step name when considering both
    partitioning pages.
  * Fix broken conditional statement that prevented
    process_autopartitioning and info_loop from being called.

 -- Michael Terry <michael.terry@canonical.com>  Thu, 17 Sep 2009 14:28:17 -0400

ubiquity (1.99.21) karmic; urgency=low

  * Install the init script (under a new, temporary name) as well as the
    Upstart job, in order that flavours whose display managers haven't yet
    converted to Upstart can still work. Take pains to ensure that only one
    of these runs.
  * Fix ubiquity's Upstart job to actually check whether it should run
    ubiquity (thanks, Mario Limonciello).
  * Build-depend on dh-di 3 to pick up fix affecting manual partitioning.
  * Tolerate LANG not being set yet in get_string (LP: #431048).

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 17 Sep 2009 00:35:04 +0100

ubiquity (1.99.20) karmic; urgency=low

  [ Michael Terry ]
  * kde: Fix crasher when in the advanced partition page by adding a
    missing function.  LP: #430413

  [ Colin Watson ]
  * Add Upstart jobs for ubiquity and oem-config (LP: #430607).

 -- Evan Dandrea <evand@ubuntu.com>  Wed, 16 Sep 2009 21:35:28 +0100

ubiquity (1.99.19) karmic; urgency=low

  [ Oliver Grawert ]
  * make sure /target/dev is properly bind mounted and unmounted in
    chroot_setup() and chroot_cleanup() so postinst triggers that require
    certain devices will find them (LP: #422101)

  [ Michael Casadevall ]
  * Add support for installing dove bootloader (LP: #409238)

  [ Michael Terry ]
  * Make sure the LANG environment variable is always set (LP: #429994)
  * kde: Fix a crasher when using oem-config (don't reference step labels
    that don't exist)

  [ Colin Watson ]
  * Automatic update of included source packages: flash-kernel 2.13ubuntu10,